# Ze-Neuz-lettah-Aye-gendt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
infrastrucuture/aws/: README.md  approval_lambda.py  main.tf  sender_lambda.py
output_samples/: ai_newsletter_20250801_144558.html  ai_newsletter_20250801_144558.txt  ai_newsletter_20250801_162456.html  ai_newsletter_20250801_162456.txt
src/: agents.py  main.py  newsletter_formatter.py  workflow.py
