[project]
name = "Ze-Neuz-lettah-Aye-gendt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai==0.4.4",
    "langgraph==0.6.0",
    "pydantic==2.11.7",
    "typing-extensions>=4.6.0",
    "pydantic-ai-slim[tavily]",
    "boto3>=1.30.0",
    "arxiv-mcp-server",
    "pydantic-ai-slim[bedrock]" 
]